--- a/assets/styles.css
+++ b/assets/styles.css
@@ -18,7 +18,7 @@ main {
   box-sizing: border-box;
   margin: auto;
   width: 100%;
-  max-width: 850px;
+  max-width: 800px;
   padding: 0.5rem;
   display: flex;
   flex-direction: column;
@@ -37,6 +37,7 @@ h1 {
   font-family: "Verdana", sans-serif;
   font-weight: 700;
   font-size: 2rem;
+  margin: 0.5rem;
 }
 
 h2 {
@@ -45,11 +46,19 @@ h2 {
   font-size: 1.5rem;
   font-style: italic;
   color: lightblue;
+  margin: 0.5rem;
+}
+
+h3 {
+  font-family: "Garamond", serif;
+  font-size: 1.3rem;
+  margin: 0.5rem;
 }
 
 p {
   line-height: 2;
-  font-size: 1.2rem;
+  font-size: 1.15rem;
+  margin: 0.5rem;
 }
 
 @font-face {
