--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,9 +1,19 @@
+:root {
+  --mantle: rgb(30, 30, 46);
+  --sky: rgb(137, 220, 235);
+}
+
 body {
   margin: 0;
   font-family: "Gergia", serif;
   font-size: 16px;
   color: gainsboro;
   background-color: black;
+}
+
+div.sourceCode {
+  padding: 0.5rem;
+  background-color: var(--mantle);
 }
 
 code {
@@ -30,14 +40,14 @@ footer {
 }
 
 a {
-  color: lightblue;
+  color: var(--sky);
 }
 
 h1 {
   font-family: "Verdana", sans-serif;
   font-weight: 700;
   font-size: 2rem;
-  margin: 0.5rem;
+  margin: 0.5rem 0;
 }
 
 h2 {
@@ -45,20 +55,24 @@ h2 {
   font-weight: 100;
   font-size: 1.5rem;
   font-style: italic;
-  color: lightblue;
-  margin: 0.5rem;
+  color: var(--sky);
+  margin: 0.5rem 0;
 }
 
 h3 {
   font-family: "Garamond", serif;
   font-size: 1.3rem;
-  margin: 0.5rem;
+  margin: 0.5rem 0;
+  color: gainsboro;
+  font-weight: 700;
 }
 
 p {
   line-height: 2;
   font-size: 1.15rem;
-  margin: 0.5rem;
+  margin: 0.5rem 0;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 @font-face {
