--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,6 +1,7 @@
 :root {
   --mantle: rgb(30, 30, 46);
   --sky: rgb(137, 220, 235);
+  --crust: rgb(17, 17, 27);
 }
 
 body {
@@ -8,7 +9,7 @@ body {
   font-family: "Gergia", serif;
   font-size: 16px;
   color: gainsboro;
-  background-color: black;
+  background-color: var(--crust);
 }
 
 div.sourceCode {
