--- a/assets/styles.css
+++ b/assets/styles.css
@@ -14,12 +14,7 @@
 
 body {
   margin: 0;
-  font-family:
-    Fira Code,
-    Monaco,
-    Consolas,
-    Ubuntu Mono,
-    monospace;
+  font-family: "Garamond", serif;
   font-size: 16px;
   font-variant-ligatures: contextual;
   text-rendering: optimizeLegibility;
@@ -36,6 +31,7 @@ div.sourceCode {
   background-color: var(--mantle);
   border-radius: 3px;
   overflow-x: scroll;
+  font-size: smaller;
 }
 
 blockquote {
@@ -66,9 +62,12 @@ header {
 }
 
 code {
-  background-color: var(--mantle);
-  border-radius: 3px;
-  padding: 0 0.25rem;
+  font-family:
+    Fira Code,
+    Monaco,
+    Consolas,
+    Ubuntu Mono,
+    monospace;
 }
 
 main {
@@ -133,5 +132,9 @@ figure img {
 }
 
 figure figcaption {
+  font-style: italic;
+}
+
+time {
   font-style: italic;
 }
