add proper introduction

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -21,8 +21,6 @@ body {
   font-variant-ligatures: contextual;
   text-rendering: optimizeLegibility;
   font-feature-settings: "liga", "tnum", "zero", "ss01", "locl", "calt";
-  /* letter-spacing: -0.02em; */
-  /* word-spacing: -0.02em; */
   color: var(--text);
   background-color: var(--crust);
   overflow-wrap: break-word;
@@ -61,7 +59,7 @@ blockquote footer {
 }
 
 header {
-  padding: 1.5rem;
+  padding: 0.5rem;
 }
 
 code {
@@ -91,7 +89,7 @@ h1 {
   font-family: var(--sans-serif-font);
   font-weight: 700;
   font-size: 2rem;
-  margin: 0.5rem 0;
+  margin: 0.75rem 0 0.25rem 0;
 }
 
 h2 {
@@ -100,21 +98,20 @@ h2 {
   font-size: 1.5rem;
   font-style: italic;
   color: var(--sky);
-  margin: 0.5rem 0;
+  margin: 0.75rem 0 0.25rem 0;
 }
 
 h3 {
   font-family: var(--sans-serif-font);
   font-size: 1.3rem;
-  margin: 0.5rem 0;
   color: var(--lavender);
+  margin: 0.75rem 0 0.25rem 0;
 }
 
 p {
   font-family: var(--serif-font);
   line-height: 2;
-  margin: 0.75rem 0;
-  text-align: justify;
+  margin: 0.5rem 0;
 }
 
 figure {
